# EDTH_Paris

./: .gitignore  CLAUDE.md  Makefile  README.md  architecture.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agent/: Dockerfile  pyproject.toml
agent/agent/: awareness.py  bus.py  comms.py  guidance.py  interceptor_agent.py  local_state.py  packet_loss.py  retasking.py  serde.py
agent/tests/: test_assignment_filter.py  test_awareness.py  test_bus.py  test_guidance.py  test_packet_loss.py  test_retasking.py  test_serde.py  test_zmqbus.py
config/: scenario_default.yaml
contracts/: __init__.py  pyproject.toml
contracts/contracts/: __init__.py  bus.py  config.py  messages.py  security.py  topics.py
contracts/tests/: test_security.py  test_topics.py
docker/: base.Dockerfile
docs/: architecture.md  battlefield-readiness.md  execution_plan.md  specification.md  workstreams.md
gs/: Dockerfile  FLEET_STATE_PLAN.md  HUNGARIAN_OPTIMIZER_PLAN.md  KALMAN_TRACKER_PLAN.md  README.md  STATUS.md  THREAT_ASSESSOR_PLAN.md  THREAT_SCORER_PLAN.md  mock_assignments.py  pyproject.toml
gs/gs/: assignment_node.py  assignment_publisher.py  filter.py  fleet.py  gs_node.py  launch_decider.py  optimizer.py  predictor.py  threat_assessor.py  track_fusion.py  track_publisher.py  tracker.py
gs/tests/: test_assignment_publisher.py  test_end_to_end.py  test_filter.py  test_fleet.py  test_optimizer.py  test_predictor.py  test_radar_to_gs.py  test_threat_assessor.py  test_track_publisher.py  test_tracker.py
gzweb/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
gzweb/src/: main.js
ideas/: challenge_2.md  challenges.md  map_to_voice_battlefield_landmark_resolver.md
ideas/argus/: ARGUS_intent_spec.md  ARGUS_jury_spec.md  ARGUS_simple.md  ARGUS_spec.md
ideas/leuko/: LEUKO_spec.md
ideas/phalanx/: PHALANX_spec.md
ideas/talos/: TALOS_spec.md
sim/: Dockerfile  mock_radar.py  pyproject.toml
sim/sim/: demo_gazebo_pipeline.py  demo_radar.py  driver.py  mock_ground_truth.py  radar_node.py  radar_sensor.py  radar_sensor_node.py  radar_stonesoup.py  world.py  world_node.py
sim/tests/: test_driver.py  test_flight_regression.py  test_ground_truth_radar.py  test_radar_publishes.py  test_radar_sensor_node.py
sim/worlds/: generate_terrain.py  intercept_scenario.sdf  quadrotor.sdf
viz/: Dockerfile  live_tracker.py  plot_drone_paths.py  pyproject.toml  track_viewer.py
viz/dashboard/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
viz/dashboard/src/: api.ts  cop_bridge.ts  gzweb.d.ts  main.ts  mock_api.ts  real_api.ts  types.ts  ws_gazebo.ts
viz/viz/: bridge.py  dashboard.py
