[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contracts"
version = "0.1.0"
description = "Shared message contracts — owned by Team 4, used by all"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["contracts"]
