[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contracts"
version = "0.1.0"
description = "Shared message contracts — owned by Team 4, used by all"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "cbor2>=5.6",            # compact canonical wire encoding (app-layer message security)
    "cryptography>=43.0",    # ChaCha20-Poly1305 AEAD (HMAC uses stdlib)
]

[tool.hatch.build.targets.wheel]
packages = ["contracts"]
