[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sim"
version = "0.1.0"
description = "Simulation engine (Gazebo + ROS2) — Team 1"
requires-python = ">=3.12"
dependencies = [
    "contracts",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "stonesoup>=1.2",        # radar / sensor + measurement models for the detection sim
]

[tool.uv.sources]
contracts = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["sim"]
